fix: double scroll in cart menu
removed

--- a/client/src/app/header/header.component.scss
+++ b/client/src/app/header/header.component.scss
@@ -141,8 +141,6 @@
           padding: 0;
           width: 20vw;
           max-height: 400px;
-          overflow-y: scroll;
-          overflow-x: hidden;
           .list-group {
             .product {
               padding: 20px;
